--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Gioia - Bootstrap Business Template</title>
+        <title>Data Intelligence Labs</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400">
@@ -48,7 +48,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Gioia - Bootstrap Business Template</a>
+					<a class="navbar-brand" href="index.html">Data Intelligence Labs</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -94,7 +94,7 @@
         	<div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 about-us-text wow fadeInLeft">
-	                    <h3>About Gioia</h3>
+	                    <h3>About Data Intelligence Labs</h3>
 	                    <p>
 	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
 	                    	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <span class="colored-text">suscipit lobortis</span> 
@@ -319,8 +319,8 @@
                         <div class="footer-box-text footer-box-text-contact">
 	                        <p><span aria-hidden="true" class="icon_pin"></span> Address: Via Principe Amedeo 9, 10100, Torino, TO, Italy</p>
 	                        <p><span aria-hidden="true" class="icon_phone"></span> Phone: 0039 333 12 68 347</p>
-	                        <p><span aria-hidden="true" class="icon_profile"></span> Skype: Gioia_Business</p>
-	                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="#">contact@gioia.com</a></p>
+	                        <p><span aria-hidden="true" class="icon_profile"></span> Skype: Data Intelligence Labs_Business</p>
+	                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="#">contact@dataintelligencelabs.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -331,7 +331,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-7 footer-copyright wow fadeIn">
-                        <p>&copy; Gioia - All rights reserved. Template by <a href="http://azmind.com">Azmind</a>.</p>
+                        <p>&copy; Data Intelligence Labs - All rights reserved.</p>
                     </div>
                     <div class="col-sm-5 footer-social wow fadeIn">
                         <a href="#"><span class="social_facebook"></span></a>
