--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Gioia - Bootstrap Business Template</a>
+					<a class="navbar-brand" href="index.html">Data Intelligence Labs</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -113,9 +113,9 @@
         	<div class="container">
         		<div class="row">
 	        		<div class="col-sm-12 wow fadeInLeftBig">
-	            		<h1>This is <span class="colored-text">Gioia</span>, a Bootstrap business template.</h1>
+	            		<h1>This is <span class="colored-text">Data Intelligence Labs</span>, a Bootstrap business template.</h1>
 	            		<p>
-	            			Download this theme <a href="http://azmind.com" target="_blank">from here</a> for free, 
+	            			Download this theme <a href="http://dataintelligencelabs.com" target="_blank">from here</a> for free, 
 	            			use it and customize it as you like.
 	            		</p>
 	            	</div>
@@ -350,8 +350,8 @@
                         <div class="footer-box-text footer-box-text-contact">
 	                        <p><span aria-hidden="true" class="icon_pin"></span> Address: Via Principe Amedeo 9, 10100, Torino, TO, Italy</p>
 	                        <p><span aria-hidden="true" class="icon_phone"></span> Phone: 0039 333 12 68 347</p>
-	                        <p><span aria-hidden="true" class="icon_profile"></span> Skype: Gioia_Business</p>
-	                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="#">contact@gioia.com</a></p>
+	                        <p><span aria-hidden="true" class="icon_profile"></span> Skype: Data Intelligence Labs_Business</p>
+	                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="#">contact@dataintelligencelabs.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -362,7 +362,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-7 footer-copyright wow fadeIn">
-                        <p>&copy; Gioia - All rights reserved. Template by <a href="http://azmind.com">Azmind</a>.</p>
+                        <p>&copy; Data Intelligence Labs - All rights reserved.</p>
                     </div>
                     <div class="col-sm-5 footer-social wow fadeIn">
                         <a href="#"><span class="social_facebook"></span></a>
