--- a/about.html
+++ b/about.html
@@ -138,13 +138,13 @@
 	            	<div class="col-sm-3">
 		                <div class="team-box wow fadeInUp">
 		                    <img src="assets/img/team/1.jpg" alt="" data-at2x="assets/img/team/1.jpg">
-		                    <h3>John Doe</h3>
+		                    <h3>Yogesh Dhanapal</h3>
 		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor...</p>
 		                    <div class="team-social">		                        
-		                        <a class="big-link-2" href="#"><span class="social_facebook"></span></a>
-		                        <a class="big-link-2" href="#"><span class="social_twitter"></span></a>
-		                        <a class="big-link-2" href="#"><span class="social_linkedin"></span></a>
-		                        <a class="big-link-2" href="#"><span class="icon_mail"></span></a>
+		                        <a class="big-link-2" href="https://www.facebook.com/geoyogesh"><span class="social_facebook"></span></a>
+		                        <a class="big-link-2" href="https://twitter.com/geoyogesh"><span class="social_twitter"></span></a>
+		                        <a class="big-link-2" href="https://www.linkedin.com/in/yogesh-dhanapal-b6645614"><span class="social_linkedin"></span></a>
+		                        <a class="big-link-2" href="mailto:yogesh.dhanapal@dataintelligencelabs.com?Subject=Hello%20Yogesh"><span class="icon_mail"></span></a>
 		                    </div>
 		                </div>
 	                </div>
