--- a/about.html
+++ b/about.html
@@ -146,6 +146,7 @@
 		                        <a class="big-link-2" href="https://www.linkedin.com/in/yogesh-dhanapal-b6645614"><span class="social_linkedin"></span></a>
 		                        <a class="big-link-2" href="mailto:yogesh.dhanapal@dataintelligencelabs.com?Subject=Hello%20Yogesh"><span class="icon_mail"></span></a>
 		                    </div>
+                            <a class="big-link-1" href="/assets/resume/Yogesh_Software_Engineer_Resume.pdf">Resume</a>
 		                </div>
 	                </div>
 	                <div class="col-sm-3">
