--- a/about.html
+++ b/about.html
@@ -48,19 +48,22 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Data Intelligence Labs</a>
+					<a class="navbar-brand" href="/">Data Intelligence Labs</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">						
 						<li>
-							<a href="index.html"><span aria-hidden="true" class="icon_house"></span><br>Home</a>
+							<a href="/"><span aria-hidden="true" class="icon_house"></span><br>Home</a>
 						</li>
 						<li>
 							<a href="portfolio.html"><span aria-hidden="true" class="icon_camera"></span><br>Portfolio</a>
 						</li>
 						<li>
-							<a href="#"><span aria-hidden="true" class="icon_comment"></span><br>Blog</a>
+							<a href="http://blogs.dataintelligencelabs.com"><span aria-hidden="true" class="icon_comment"></span><br>Blogs</a>
+						</li>
+                        <li>
+							<a href="http://videos.dataintelligencelabs.com"><span aria-hidden="true" class="icon_comment"></span><br>Videos</a>
 						</li>
 						<li>
 							<a href="services.html"><span aria-hidden="true" class="icon_tools"></span><br>Services</a>
