Fixed Contacts page

--- a/contact.html
+++ b/contact.html
@@ -65,8 +65,76 @@
     <div class="contact-us-container">
         <div class="container">
             <div class="row">
-                <div class="col-sm-7 contact-form wow fadeInLeft">
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <a href="">suscipit lobortis</a> nisl ut aliquip ex ea commodo consequat. </p>
+                <div class="col-sm-12 team-title wow fadeIn">
+                    <h2>Get In Touch</h2> </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-box contact-img wow fadeInDown" style="background:none;"> <img src="assets/img/locations/mail.png" alt="" data-at2x="assets/img/locations/mail.png">
+                        <h3> Send a Email </h3>
+                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="contact@dataintelligencelabs.com">contact@dataintelligencelabs.com</a></p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-box contact-img wow fadeInDown" style="background:none;"> <img src="assets/img/locations/call.png" alt="" data-at2x="assets/img/locations/call.png">
+                        <h3>Give us a call </h3>
+                        <p><span aria-hidden="true" class="icon_phone"></span> Phone: +91 8754959675 </p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-box contact-img wow fadeInDown" style="background:none;"> <img src="assets/img/locations/locate.png" alt="" data-at2x="assets/img/locations/locate.png">
+                        <h3>Visit our Office </h3>
+                        <p> &nbsp; </p>
+                    </div>
+                </div>
+            </div>
+            <!--Our Locations-->
+            <div class="row">
+                <div class="col-sm-12 team-title wow fadeIn">
+                    <h2>Our Locations</h2> </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="team-box wow fadeInDown"> <img src="assets/img/locations/india.jpg" alt="" data-at2x="assets/img/locations/india.jpg">
+                        <h3> Software Development Lab </h3>
+                        <p> NO 50 WHITE CITY LAYOUT SEEGEHALLI K.R.PURAM HOBLI,BANGALORE 560036, INDIA </p>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-box wow fadeInDown"> <img src="assets/img/locations/australia.jpg" alt="" data-at2x="assets/img/locations/australia.jpg">
+                        <h3> R&D Lab </h3>
+                        <p> 2 MULYAN AVENUE CARLINGFORD NSW 2118, AUSTRALIA </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 contact-address wow fadeInUp">
+                        <h3>We Are Here</h3>
+                        <div class="map"></div>
+                </div>
+            </div>
+            <!--Sales Team-->
+            <div class="row">
+                <div class="center team-title wow fadeIn" style="width:220px;">
+                    <h2 class="text-center">For Sales</h2> </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="sales-image center" style="width:100px;"> <img src="assets/img/sales/muthu-sales.jpg" alt="" data-at2x="assets/img/sales/muthu-sales.jpg"> </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h3 class="text-center"> Muthukumar Rajendran </h3> </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <p class="text-center"><span aria-hidden="true" class="icon_mail"></span> Email: <a href="muthukumar.rajendran@dataintelligencelabs.com">muthukumar.rajendran@dataintelligencelabs.com</a></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 contact-form wow fadeInLeft">
+                    <h3> Request for Demo </h3>
                     <form role="form" action="assets/contact.php" method="post">
                         <div class="form-group">
                             <label for="contact-name">Name</label>
@@ -83,37 +151,6 @@
                         </div>
                         <button type="submit" class="btn">Send</button>
                     </form>
-                </div>
-                <div class="col-sm-5 contact-address wow fadeInUp">
-                    <h3>We Are Here</h3>
-                    <div class="map"></div>
-                    <h3>Address</h3>
-                    <p>Via Principe Amedeo 9
-                        <br> 10100, Torino, TO, Italy</p>
-                    <p>Phone: 0039 333 12 68 347</p>
-                </div>
-            </div>
-            <!--Our Leadership-->
-            <div class="team-container">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12 team-title wow fadeIn">
-                            <h2>Our Locations</h2> </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <div class="team-box wow fadeInDown"> <img src="assets/img/locations/india.jpg" alt="" data-at2x="assets/img/locations/india.jpg">
-                                <h3> Software Development Lab </h3>
-                                <p> NO 50 WHITE CITY LAYOUT SEEGEHALLI K.R.PURAM HOBLI,BANGALORE 560036, INDIA </p>
-                            </div>
-                        </div>
-                        <div class="col-sm-3">
-                            <div class="team-box wow fadeInDown"> <img src="assets/img/locations/australia.jpg" alt="" data-at2x="assets/img/locations/australia.jpg">
-                                <h3> R&D Lab </h3>
-                                <p> 2 MULYAN AVENUE CARLINGFORD NSW 2118, AUSTRALIA </p>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -153,7 +190,7 @@
                         <p><span aria-hidden="true" class="icon_pin"></span> Address: No 50 White City Layout Seegehalli, K.R.Puram Hobli, Bangalore 560036, India </p>
                         <p><span aria-hidden="true" class="icon_phone"></span> Phone: +91 8754959675 </p>
                         <!--<p><span aria-hidden="true" class="icon_profile"></span> Skype: Data Intelligence Labs_Business </p>-->
-                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="#">contact@dataintelligencelabs.com</a></p>
+                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="contact@dataintelligencelabs.com">contact@dataintelligencelabs.com</a></p>
                     </div>
                 </div>
             </div>
