--- a/portfolio.html
+++ b/portfolio.html
@@ -221,7 +221,7 @@
                         <p><span aria-hidden="true" class="icon_pin"></span> Address: No 50 White City Layout Seegehalli, K.R.Puram Hobli, Bangalore 560036, India </p>
                         <p><span aria-hidden="true" class="icon_phone"></span> Phone: +91 8754959675 </p>
                         <!--<p><span aria-hidden="true" class="icon_profile"></span> Skype: Data Intelligence Labs_Business </p>-->
-                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="#">contact@dataintelligencelabs.com</a></p>
+                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="contact@dataintelligencelabs.com">contact@dataintelligencelabs.com</a></p>
                     </div>
                 </div>
             </div>
