--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="team-box wow fadeInDown"> <img src="assets/img/team/1.jpg" alt="" data-at2x="assets/img/team/1.jpg">
+                    <div class="team-box wow fadeInDown"> <img src="assets/img/team/jp.jpg" alt="" data-at2x="assets/img/team/jp.jpg">
                         <h3>Jayaprakash Subramani</h3>
                         <p>Big Data Engineer</p>
                         <div class="team-social"> <a class="big-link-2" href="#"><span class="social_facebook"></span></a> <a class="big-link-2" href="#"><span class="social_twitter"></span></a> <a class="big-link-2" href="#"><span class="social_linkedin"></span></a> </div>
@@ -248,7 +248,7 @@
                         <p><span aria-hidden="true" class="icon_pin"></span> Address: No 50 White City Layout Seegehalli, K.R.Puram Hobli, Bangalore 560036, India </p>
                         <p><span aria-hidden="true" class="icon_phone"></span> Phone: +91 8754959675 </p>
                         <!--<p><span aria-hidden="true" class="icon_profile"></span> Skype: Data Intelligence Labs_Business </p>-->
-                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="#">contact@dataintelligencelabs.com</a></p>
+                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="contact@dataintelligencelabs.com">contact@dataintelligencelabs.com</a></p>
                     </div>
                 </div>
             </div>
