--- a/contact.html
+++ b/contact.html
@@ -66,23 +66,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 team-title wow fadeIn">
-                    <h2>Get In Touch</h2> </div>
+                    <h2>Get In Touch</h2> 
+                    <p>We’re friendly and available to chat. Reach out to us anytime and we w’ll happily answer your questions.</p>
+                </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="team-box contact-img wow fadeInDown" style="background:none;"> <img src="assets/img/locations/mail.png" alt="" data-at2x="assets/img/locations/mail.png">
+                    <div class="team-box contact-img wow fadeInDown" style="background:none;margin-top: 10px;"> <img src="assets/img/locations/mail.png" alt="" data-at2x="assets/img/locations/mail.png">
                         <h3> Send a Email </h3>
                         <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="contact@dataintelligencelabs.com">contact@dataintelligencelabs.com</a></p>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-box contact-img wow fadeInDown" style="background:none;"> <img src="assets/img/locations/call.png" alt="" data-at2x="assets/img/locations/call.png">
+                    <div class="team-box contact-img wow fadeInDown" style="background:none;margin-top: 10px;"> <img src="assets/img/locations/call.png" alt="" data-at2x="assets/img/locations/call.png">
                         <h3>Give us a call </h3>
                         <p><span aria-hidden="true" class="icon_phone"></span> Phone: +91 8754959675 </p>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-box contact-img wow fadeInDown" style="background:none;"> <img src="assets/img/locations/locate.png" alt="" data-at2x="assets/img/locations/locate.png">
+                    <div class="team-box contact-img wow fadeInDown" style="background:none;margin-top: 10px;"> <img src="assets/img/locations/locate.png" alt="" data-at2x="assets/img/locations/locate.png">
                         <h3>Visit our Office </h3>
                         <p> &nbsp; </p>
                     </div>
@@ -103,7 +105,7 @@
                 <div class="col-sm-3">
                     <div class="team-box wow fadeInDown"> <img src="assets/img/locations/australia.jpg" alt="" data-at2x="assets/img/locations/australia.jpg">
                         <h3> R&D Lab </h3>
-                        <p> 2 MULYAN AVENUE CARLINGFORD NSW 2118, AUSTRALIA </p>
+                        <p> 2 MULYAN AVENUE CARLINGFORD NSW 2118, AUSTRALIA <br/><br/><br/></p>
                     </div>
                 </div>
             </div>
