--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Data Intelligence Labs</title>
+    <title>Data Intelligence Muthu</title>
     <!-- CSS -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:700,400">
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 team-title wow fadeIn">
-                    <h2>Get In Touch</h2> 
+                    <h2>Get In Touch</h2>
                     <p>We’re friendly and available to chat. Reach out to us anytime and we w’ll happily answer your questions.</p>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                 <div class="col-sm-4">
                     <div class="team-box contact-img wow fadeInDown" style="background:none;margin-top: 10px;"> <img src="assets/img/locations/mail.png" alt="" data-at2x="assets/img/locations/mail.png">
                         <h3> Send a Email </h3>
-                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="contact@dataintelligencelabs.com">contact@dataintelligencelabs.com</a></p>
+                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="@dataintelligencelabs.com">muthukumar.rajendran@dataintelligencelabs.com</a></p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -99,20 +99,24 @@
                 <div class="col-sm-3">
                     <div class="team-box wow fadeInDown"> <img src="assets/img/locations/india.jpg" alt="" data-at2x="assets/img/locations/india.jpg">
                         <h3> Software Development Lab </h3>
-                        <p> NO 50 WHITE CITY LAYOUT SEEGEHALLI K.R.PURAM HOBLI,BANGALORE 560036, INDIA </p>
+                        <p> NO 51 WHITE CITY LAYOUT SEEGEHALLI K.R.PURAM HOBLI,BANGALORE 560036, INDIA </p>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-box wow fadeInDown"> <img src="assets/img/locations/australia.jpg" alt="" data-at2x="assets/img/locations/australia.jpg">
                         <h3> R&D Lab </h3>
-                        <p> 2 MULYAN AVENUE CARLINGFORD NSW 2118, AUSTRALIA <br/><br/><br/></p>
+                        <p> 2 MULYAN AVENUE CARLINGFORD NSW 2118, AUSTRALIA
+                            <br/>
+                            <br/>
+                            <br/>
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12 contact-address wow fadeInUp">
-                        <h3>We Are Here</h3>
-                        <div class="map"></div>
+                    <h3>We Are Here</h3>
+                    <div class="map"></div>
                 </div>
             </div>
             <!--Sales Team-->
