--- a/services.html
+++ b/services.html
@@ -66,8 +66,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 services-full-width-text wow fadeInLeft">
-                    <h3>Lorem Ipsum Dolor Sit Amet</h3>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <span class="colored-text">suscipit lobortis</span> nisl ut aliquip ex ea commodo consequat. Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod tempor</strong> incididunt. </p>
+                    <h3>Service Objective</h3>
+                    <p>We make sure that our clients’ businesses are at the heart of everything we do and we take a 3D approach to our work </p>
+                    <p>  <span class="colored-text">Our Services includes</span> </p>
                 </div>
             </div>
         </div>
@@ -79,26 +80,26 @@
                 <div class="col-sm-3">
                     <div class="service wow fadeInUp">
                         <div class="service-icon"><span aria-hidden="true" class="icon_gift"></span></div>
-                        <h3>Beautiful Websites</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et...</p> <a class="big-link-1" href="services.html">Read more</a> </div>
+                        <h3>Consulting services</h3>
+                        <p>MDM strategy and roadmap, data governance, and maturity assessments</a> </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="service wow fadeInDown">
                         <div class="service-icon"><span aria-hidden="true" class="icon_mobile"></span></div>
-                        <h3>Responsive Layout</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et...</p> <a class="big-link-1" href="services.html">Read more</a> </div>
+                        <h3>Process reengineering</h3>
+                        <p>Proven MDM processes and controls for product, vendor, material, and customer master data management</a> </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="service wow fadeInUp">
                         <div class="service-icon"><span aria-hidden="true" class="icon_pencil"></span></div>
-                        <h3>Awesome Logos</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et...</p> <a class="big-link-1" href="services.html">Read more</a> </div>
+                        <h3>Technology</h3>
+                        <p>Implementation and management of MDM technology across multiple domains</a> </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="service wow fadeInDown">
                         <div class="service-icon"><span aria-hidden="true" class="icon_printer-alt"></span></div>
-                        <h3>High Res Prints</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et...</p> <a class="big-link-1" href="services.html">Read more</a> </div>
+                        <h3>Master data quality</h3>
+                        <p> Data profiling, cleansing, enrichment, and data migration services</a> </div>
                 </div>
             </div>
         </div>
@@ -108,8 +109,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 services-half-width-text wow fadeInLeft">
-                    <h3>Lorem Ipsum</h3>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <span class="colored-text">suscipit lobortis</span> nisl ut aliquip ex ea commodo consequat. Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod tempor</strong> incididunt. </p>
+                    <h3>DIL's Master Data Management</h3>
+                    <p> Recent research conducted among finance, accounting, and procurement professionals revealed that improvements in master data management (MDM) could have a material impact on their key business challenges, but MDM is one of the least mature functions. Robust MDM practices require processes and tools that continuously maintain data quality and accuracy. DIL's master data services ensure you focus on the areas that deliver the most business impact to reduce the total cost of operations, deliver more accurate reporting, improve regulatory compliance, and enable better business outcomes. </p>
                 </div>
                 <div class="col-sm-6 services-half-width-text wow fadeInUp">
                     <h3>Dolor Sit Amet</h3>
