--- a/contact.html
+++ b/contact.html
@@ -108,16 +108,13 @@
                         <p> 2 MULYAN AVENUE CARLINGFORD NSW 2118, AUSTRALIA
                             <br/>
                             <br/>
-                            <br/>
-                        </p>
+                            <br/> </p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12 contact-address wow fadeInUp">
-                    <h3>We Are Here</h3>
-                    <div class="map"></div>
-                </div>
+                    <h3>We Are Here</h3> <img class="map" src="assets/img/locations/world.jpg" alt="" data-at2x="assets/img/locations/world.jpg" /> </div>
             </div>
             <!--Sales Team-->
             <div class="row">
